# desk-booker-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: automation.yml
api/: auth.py  main.py  model_views.py
api/templates/: base.html
app/: .env.example  bot.py
app/callback/: book_cb.py
app/config_data/: config.py
app/database/: engine.py  models.py  orm_queries.py
app/dialogs/: __init__.py
app/enums/: admin_kb_buttons.py  button_labels.py
app/filters/: admin.py  chat_type.py
app/handlers/: __init__.py  booking_kb_handler.py  booking_management.py  custom_kb_handler.py  error.py  inline_kb_handler.py
app/keyboards/: admin_kb.py  all_bookings_kb.py  book_kb.py  booking_kb.py  callbacks.py  cancel_bookings_kb.py  custom_inline_kb.py  inline.py  inline_kb.py  reply.py  set_menu.py
app/lexicon/: lexicon_buttons.py  lexicon_en.py
app/locales/: stub.pyi
app/middlewares/: __init__.py  config_middleware.py  db_middleware.py  i18n.py  user_middleware.py
app/migrations/: env.py
app/routers/: __init__.py  error.py
app/scenes/: setup.py
app/services/: bookings_list_generator.py  dates_generator.py
app/states/: states.py  user.py
app/utils/: bot_description.py  i18n.py  logger.py
sqladmin_app/: main.py  model_views.py
sqladmin_app/templates/: error.html  login.html
tests/integration/: Makefile  config.py  conftest.py  const.py  mocked_bot.py  pytest.ini  run_tests.bat  run_tests.sh  test_bot_core.py  (+1 more)
(+100 files in other folders)
