[tool.poetry]
name = "desk-booker-bot"
version = "0.1.0"
description = ""
authors = ["tebriz91 <tebriz.tagiyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.27"
python-dotenv = "^1.0.1"
aiosqlite = "^0.19.0"
pytz = "^2024.1"
holidays = "^0.43"
aiogram = "^3.4.1"
asyncpg = "^0.29.0"
redis = "^5.0.3"
aioredis = "^2.0.1"
aiogram-dialog = "^2.1.0"
environs = "^11.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "==0.0.240"
pyright = "==1.1.291"
black = "==23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
